# kastredux

./: LICENSE  MANIFEST.in  README.md  core.py  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst
docs2/NOTsource/: conf.py  index.rst
docs2/OLD/: index.rst  reduction.rst
resources/sample_spectra/: kastRED_J1229+0752_20220310.fits  kastRED_J1717+7244_20211113.fits
resources/spectral_standards/: A00_SDSS-kesseli2017.txt  A00_pickles1998.txt  G20_SDSS-kesseli2017.txt  K00-Z-1.0_SDSS-kesseli2017.txt  K00-Z-1.5_SDSS-kesseli2017.txt  K10-Z+0.5_SDSS-kesseli2017.txt  K10-Z-1.0_SDSS-kesseli2017.txt  K20-Z-1.5_SDSS-kesseli2017.txt  K20-Z-2.0_SDSS-kesseli2017.txt  K20III-Z-1.5_SDSS-kesseli2017.txt  K20_SDSS-kesseli2017.txt  K30III-Z-0.5_SDSS-kesseli2017.txt  K30III-Z-1.0_SDSS-kesseli2017.txt  K30III_SDSS-kesseli2017.txt  K30_SDSS-kesseli2017.txt  K40-Z-0.5_SDSS-kesseli2017.txt  K40III-Z+0.5_SDSS-kesseli2017.txt  K40III-Z-1.5_SDSS-kesseli2017.txt  K40III-Z-2.0_SDSS-kesseli2017.txt  K40III_SDSS-kesseli2017.txt  K40_SDSS-kesseli2017.txt  K50-Z-2.0_SDSS-kesseli2017.txt  K50III-Z+0.5_SDSS-kesseli2017.txt  K50III-Z-1.5_SDSS-kesseli2017.txt  K50III-Z-2.0_SDSS-kesseli2017.txt  K70-Z-1.0_SDSS-kesseli2017.txt  K70III_SDSS-kesseli2017.txt  K70_Gl143-1-kesseli2019.txt  M10_Gl229A_kesseli2019.txt  M40_NLTT3247_kesseli2019.txt  dM60_Gl406-kesseli2019.txt  esdK70_LHS3276-kesseli2019.txt  esdM30_LHS1174-kesseli2019.txt  (+10 more)
training/: basic_spectral_analysis.ipynb
tutorials/: batch reduction.ipynb  myspectrum.fits
(+119 files in other folders)
